--- a/server/fmHarmony.html
+++ b/server/fmHarmony.html
@@ -22,9 +22,23 @@
 	    background-color:rgb(85,85,85);
 	}
 
+	#crosshairs {
+		top:50%;
+		left:50%;
+		margin-top: -12.5px;
+		margin-left: -12.5px;
+		position: absolute;
+	}
+
 	#gui{
 		left: 10px;
 		top: 10px;
+		position: absolute;
+	}
+
+	#move{
+		right: 10px;
+		bottom: 30px;
 		position: absolute;
 	}
 
@@ -32,6 +46,12 @@
 		color: rgb(250,250,250);
 		text-align: center;
 		background-color:rgb(40,40,40);
+		opacity: 0.7;
+	}
+
+	#theButton{
+		color: rgb(250,250,250);
+		text-align: center;
 		opacity: 0.7;
 	}
 
@@ -68,13 +88,29 @@
 			</div>
 		</div>
 
+		<div id="move" style="z-index:9999">
+			<div id="theButton">
+				<input type="button" style="font-family: sans-serif; font-size: 18px;" value="move" id="moveButton" onclick="moveUser();">
+			</div>
+		</div>
+
+		<div id="crosshairs" style="z-index:9999">
+			<div id="container">
+
+				<div id="crossHairsIcon">
+					<img class="datCrosshair" src="./icons/crosshairs.png" width="25px" height="25px"></img>
+				</div>
+
+			</div>
+		</div>
+
 	</div>
 
 	<div id="text">
-			<script src="dat.gui.js"></script>
-			<script src="fmHarmony.js"></script>
+		<script src="dat.gui.js"></script>
+		<script src="fmHarmony.js"></script>
 	</div>
-	    
+
 	</script>
 
 	</body>
