--- a/server/fmHarmony.html
+++ b/server/fmHarmony.html
@@ -36,6 +36,19 @@
 		position: absolute;
 	}
 
+	#processing {
+		top: 50%;
+		left: 50%;
+		margin-top: -125px;
+		margin-left: -60px;
+		opacity: 0;
+		background-color:rgb(85,85,85);
+		color: rgb(200,200,200);
+		font-size: x-large;
+	}
+
+
+
 	#move{
 		right: 10px;
 		bottom: 30px;
@@ -50,6 +63,12 @@
 	}
 
 	#theButton{
+		color: rgb(250,250,250);
+		text-align: center;
+		opacity: 0.7;
+	}
+
+	#theButton2{
 		color: rgb(250,250,250);
 		text-align: center;
 		opacity: 0.7;
@@ -92,6 +111,10 @@
 			<div id="theButton">
 				<input type="button" style="font-family: sans-serif; font-size: 18px;" value="move" id="moveButton" onclick="moveUser();">
 			</div>
+			<br>
+			<div id="theButton2">
+				<input type="button" style="font-family: sans-serif; font-size: 18px;" value="log" id="logButton" onclick="logStations();">
+			</div>
 		</div>
 
 		<div id="crosshairs" style="z-index:9999">
@@ -101,8 +124,14 @@
 					<img class="datCrosshair" src="./icons/crosshairs.png" width="25px" height="25px"></img>
 				</div>
 
+				<div id="processing" style="z-index:9999">
+					Working . . .
+				</div>
+
 			</div>
 		</div>
+
+		
 
 	</div>
 
