Firmware Lists 3 Closest Stations. Server Handles negative lat/lon better. KML Builder computes station strength URL more accurately.

--- a/server/fmHarmony.html
+++ b/server/fmHarmony.html
@@ -47,8 +47,6 @@
 		font-size: x-large;
 	}
 
-
-
 	#move{
 		right: 10px;
 		bottom: 30px;
@@ -85,6 +83,11 @@
 		bottom: 5px;
 		font-size: xx-small;
 		right: auto;
+		position: relative;
+	}
+
+	div.olControlMousePosition {
+		left: 425px;
 		position: relative;
 	}
 
